# BMI

./: BMI.ipynb  BMI.py  README.md  Test_json_file.json  pyproject.toml.ipynb  setup.cfg
