[metadata]
name = BMI
version = 0.0.1
author = Nilanjan Sahu
author_email = nilu4u.sahu@gmail.com
description = A short discription.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
py_modules = div_mod
